force-app/main/default/objects/custom_create22__c/custom_create22__c.object-meta.xml
<CustomObject>
    <label>Custom created object22</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects22</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>