force-app/main/default/objects/custom_create22__c/fields/custom_create_22field552__c.field-meta.xml
<CustomField>
    <fullName>custom_create_22field552__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 22field552</label>
    <type>Checkbox</type>
</CustomField>