force-app/main/default/objects/custom_create22__c/fields/custom_create_22field591__c.field-meta.xml
<CustomField>
    <fullName>custom_create_22field591__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 22field591</label>
    <type>Checkbox</type>
</CustomField>